force-app/main/default/objects/Competitor__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <label>Documentation</label>
    <type>Url</type>
</CustomField>